--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -15,7 +15,7 @@
       <nav>
         <ul>
           <li><a href="{{ url_for('shopping_cart') }}">Shopping Cart</a></li>
-          <li><a href="{{ url_for('products') }}">Products</a></li>
+          <!-- <li><a href="{{ url_for('products') }}">Products</a></li> -->
           <li><a href="{{ url_for('search') }}">Search</a></li>
         </ul>
       </nav>
