--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -29,16 +29,16 @@
         <input type="password" id="password" name="password" required />
 
         <button type="submit">Login</button>
-        <ul>
-          <li><a href="{{ url_for('register') }}"> Register</a></li>
-        <!-- <p class="register">
-          Don't have an account? <a href="register.html">Register here</a>
-        </p> -->
       </form>
+      <button onclick="goToRegister()" class="register-button">Register</button>
     </div>
     <script>
       function goBack() {
         window.history.back();
+      }
+
+      function goToRegister() {
+        window.location.href = "{{ url_for('register') }}";
       }
     </script>
   </body>
